--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,12 @@ body, .parallax, .panel {
   width: 100%;
   height: 350px;
   color: white;
-  text-shadow: #000 0 1px 1px;
+  text-shadow: #000000 0 1px 1px;
   background: transparent;
+}
+
+body > .container {
+    min-height: 100%;
 }
 
 .shady-circle {
@@ -47,9 +51,10 @@ form .row {
 }
 
 footer {
-    height: 100px;
     background-color: #333333;
-    margin-top: 50px;
+    height: 100px;
+    margin-top: 150px;
+    margin-bottom: 0;
 }
 
 footer span {
