--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,13 @@ body, .parallax, .panel {
   background: transparent;
 }
 
+body, html {
+    height: 100%;
+}
+
 body > .container {
     min-height: 100%;
+
 }
 
 .shady-circle {
@@ -52,9 +57,8 @@ form .row {
 
 footer {
     background-color: #333333;
-    height: 100px;
-    margin-top: 150px;
-    margin-bottom: 0;
+    min-height: 100px;
+    margin-top: 50px;
 }
 
 footer span {
