--- a/css/main.css
+++ b/css/main.css
@@ -10,13 +10,22 @@ body, .parallax, .panel {
 }
 
 .parallax {
-  background: url('/img/padel.jpg') no-repeat center center;
   position: fixed;
   width: 100%;
   height: 350px;
   top:0;
   left:0;
   z-index: -1;
+}
+
+.parallax.index {
+    background: url('/img/padel.jpg') no-repeat center center;
+    background-size: cover;
+}
+
+.parallax.servicios {
+    background: url('/img/services.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 .jumbotron {
