--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,4 @@
-
-<section ng-controller="LoginController" class="panel panel-default">
+<section class="panel panel-default">
     <div class="panel-body">
         <h1>Acceso: Usuario o correo</h1>
         <form class="form-horizontal col-md-4 col-md-offset-4">
