--- a/views/registro.html
+++ b/views/registro.html
@@ -1,5 +1,4 @@
-
-<section ng-controller="RegistroController" class="panel panel-default">
+<section class="panel panel-default">
     <div class="panel-body">
         <h1>Registro de usuario</h1>
         <form class="form-horizontal col-md-4 col-md-offset-4">
